--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.DetailsActivity" />
+        <activity
+            android:name=".activity.DetailsActivity"
+            android:theme="@style/AppTheme.Details" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
