--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,9 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 # Enables namespacing of each library's R class so that its R class includes only the
-# resources declared in the library itself and none from the library's dependencies,
+# ui declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 # Automatically migrate third-party libraries to use AndroidX
 android.enableJetifier=true
+org.gradle.unsafe.configuration-cache=true
