Added the rest of the functionalities to the app. Now, the app is fully working. It allows to perform the exercises while showing the user a visual input of the recording (waveform).

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,15 +40,18 @@ dependencies {
     // Room
     implementation 'androidx.room:room-runtime:2.3.0'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
-
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
-    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation 'androidx.activity:activity:1.7.0'
+    implementation 'androidx.fragment:fragment:1.5.6'
+
+    implementation 'com.google.android.material:material:1.8.0'
+
+    testImplementation 'junit:junit:4.13.2'
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
@@ -57,6 +60,14 @@ dependencies {
 
     implementation 'com.arthenica:ffmpeg-kit-full:5.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+}
+
+configurations.all {
+    resolutionStrategy {
+        force 'org.jetbrains.kotlin:kotlin-stdlib:1.8.10'
+        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.10'
+        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.10'
+    }
 }
 
 gradle.projectsEvaluated {
